fixed scroll buttons visibility

--- a/grid-style.css
+++ b/grid-style.css
@@ -10,11 +10,11 @@ header, footer {
     display: flex;
     background-color: #a29dd4;
     padding: 5px;
+    padding-left: 1.25em;
     white-space: nowrap;
 }
 
 #tab-menu {
-    overflow: hidden;
     width: 100%;
 }
 
@@ -23,7 +23,6 @@ header, footer {
     overflow-x: hidden;
     scroll-behavior: smooth;
     max-width: calc(100vw - 3.2em);
-    margin-left: 1.25em;
 }
 
 main {
@@ -58,6 +57,8 @@ main {
     border-radius: 0.4em;
     background-color: #bfbddc;
     z-index: 1;
+
+    font-weight: 900;
 }
 
 .scroll-button:hover {
